2008-08-05  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Tim.

        <rdar://problem/5732836> XMLHttpRequest: Inspector should show network
        activity/XHR in Console (17233)

        * xml/XMLHttpRequest.cpp:
        (WebCore::XMLHttpRequest::didFinishLoading):

2008-08-05  Dean Jackson  <dino@apple.com>

        Fix the ChangeLog that was corrupted by r34545.

2008-08-04  Timothy Hatcher  <timothy@apple.com>

        Makes the selection surround just the name or value that was
        double clicked when editing CSS properties. This regressed when
        the Inspector started using focus/blur events, since a focus on
        a content editable region changes the selection.

        https://bugs.webkit.org/show_bug.cgi?id=20280

        Reviewed by Adam Roben.

        * page/inspector/StylesSidebarPane.js:
        (WebInspector.StylePropertyTreeElement.prototype.startEditing):
        Change the selection after calling WebInspector.startEditing,
        since WebInspector.startEditing will set an initial selection
        due to a focus event.

2008-08-04  Timothy Hatcher  <timothy@apple.com>

        Changes the editing behavior in the Inspector to commit changes
        when focus is lost, instead of reverting the changes.

        https://bugs.webkit.org/show_bug.cgi?id=20279

        Reviewed by Adam Roben.

        * page/inspector/inspector.js:
        (WebInspector.startEditing): Call editingCommitted in blurEventListener
        instead of editingCancelled.

2008-08-04  Timothy Hatcher  <timothy@apple.com>

        Adds the ability to increment/decrement numbers in editable style
        properties with the arrow and page keys.

        Reviewed by Adam Roben.

        https://bugs.webkit.org/show_bug.cgi?id=20273

        * page/inspector/StylesSidebarPane.js:
        (WebInspector.StylePropertyTreeElement.prototype.updateAll):
        Updates all properties in the current section, or all sections